<resources>
    <string name="app_name">GroomConnect</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeatpassword">Repeat password</string>
    <string name="rememberme">Remember me</string>
    <string name="Forgotpassword">Forgot password</string>
    <string name="Login">Log in</string>
    <string name="Createacc">Create account</string>
    <string name="loginas">Log in as</string>
    <string name="or">OR</string>
    <string name="fullname">Full name</string>
    <string name="phonenumber">Phone number</string>
    <string name="homeaddress">Home address</string>
    <string name="termsandcondition">By clicking the sign-up button,
        you agree to our Privacy Policy, Terms and Conditions.</string>
    <string name="haveaccount">Have an account? Log in.</string>
    <string name="home">Home</string>
    <string name="payment">Payment</string>
    <string name="account">Account</string>
    <string name="message">Messages</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_otp">Enter OTP sent to</string>
    <string name="otp_ver_code">OTP Verification</string>
    <string name="didnt_rcv_code">Didnt recieved code? </string>
    <string name="resend">RESEND OTP</string>
    <string name="income">Income</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="products">Products</string>
    <string name="code">Code</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="p001">P001</string>
    <string name="product_a">Product A</string>
    <string name="search">search</string>
    <string name="product_details">Product Details</string>
    <string name="stock">Stock</string>
    <string name="name">Name</string>
    <string name="service_details">Service Details</string>
    <string name="add_expenses">Add expenses</string>
    <string name="date">Date</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="add_to_service">Add to Service</string>
    <string name="product_name">Product Name</string>
    <string name="book_now">Book Now</string>
    <string name="export_to_excel">Export to Excel</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="logout">Logout</string>
    <string name="sales_report">Sales Report</string>
    <string name="log_out">Log out</string>
    <string name="pet_profile">Pet profile</string>
    <string name="appointments">Appointments</string>
    <string name="calendar">Calendar</string>
    <string name="inventory">Inventory</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_cart">Add to cart\n</string>
    <string name="buy_now">Buy now</string>
    <string name="back_button">BackButton</string>
    <string name="cart_icon">Cart icon\n</string>
    <string name="product_image">product image\n</string>
    <string name="profile">Profile</string>

    <string-array name="date_options">
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
        <item>This Year</item>
    </string-array>


    <string-array name="types_of_services">
        <item>Types of Services</item> <!-- This will act as the hint -->
        <item>Service 1</item>
        <item>Service 2</item>
        <item>Service 3</item>
        <!-- Add more services here -->
    </string-array>
    <string-array name="product_options">
        <item>Select a Product</item> <!-- Hint item -->
        <item>Product 1</item>
        <item>Product 2</item>
        <item>Product 3</item>
        <!-- Add more products here -->
    </string-array>
</resources>