<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:title="@string/home"
            android:id="@+id/home"
            android:icon="@drawable/home" />
        <item
            android:title="@string/account"
            android:id="@+id/accountA"
            android:icon="@drawable/femaleprofile"/>
        <item
            android:title="@string/pet_profile"
            android:id="@+id/petsprofiles"
            android:icon="@drawable/petsprofile" />
        <item
            android:title="@string/sales_report"
            android:id="@+id/sales"
            android:icon="@drawable/salesreport24"/>
        <item
            android:title="@string/appointments"
            android:id="@+id/appoint"
            android:icon="@drawable/paw24"/>
        <item
            android:title="@string/inventory"
            android:id="@+id/inventory"
            android:icon="@drawable/inventory24" />
        <item
            android:title="@string/calendar"
            android:id="@+id/calendar"
            android:icon="@drawable/calendar" />

    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/admin_logout"
                android:icon="@drawable/logout"
                android:title="@string/log_out"/>
        </menu>

    </item>

</menu>