<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:title="@string/home"
            android:id="@+id/home"
            android:icon="@drawable/home" />
        <item
            android:title="Pet profile"
            android:id="@+id/petProfile"
            android:icon="@drawable/petsprofile" />
        <item
            android:title="@string/account"
            android:id="@+id/account"
            android:icon="@drawable/account"/>
        <item
            android:title="@string/appointments"
            android:id="@+id/appoint"
            android:icon="@drawable/paw24"/>
        <item
            android:title="Messages"
            android:id="@+id/messages"
            android:icon="@drawable/messages"
            />

        <item
            android:title="@string/faq_s"
            android:id="@+id/faq"
            android:icon="@drawable/faqs"/>

    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/customer_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout"/>
        </menu>

    </item>

</menu>