<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mintgreen"
    tools:context=".admin.DetailsProduct">

    <LinearLayout
        android:layout_width="291dp"
        android:layout_height="352dp"
        android:layout_centerInParent="true"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:backgroundTintMode="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="close_button"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/product_details"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="5dp"
            android:text="@string/code"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="5dp"
            android:text="@string/name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="5dp"
            android:text="@string/price"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="5dp"
            android:text="@string/stock"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="5dp"
            android:text="@string/description"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
