<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AddServices">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/service_details"
                android:gravity="center"/>

            <EditText
                android:id="@+id/editTextCode"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="15sp"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="@string/code"
                />
            <EditText
                android:id="@+id/editTextDesc"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:text="Description"
                />
            <EditText
                android:id="@+id/editTextCategory"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:text="Category" />
            <EditText
                android:id="@+id/editTextPrice"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:text="@string/price" />
            <Button
                android:id="@+id/saveBtn"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="Save"
                android:backgroundTint="@color/green"/>
        </LinearLayout>

</RelativeLayout>
