<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mintgreen"
    tools:context=".admin.DetailsService">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/service_details"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editTextCode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="15sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/code"
            />
        <EditText
            android:id="@+id/editTextDesc"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="Description"
            />
        <EditText
            android:id="@+id/editTextCategory"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="Category" />
        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="@string/price" />
        <!-- Horizontal LinearLayout for buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/ServSaveBtn"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="Save"
                app:cornerRadius="0dp"
                android:backgroundTint="@color/green"/>
            <View
                android:layout_width="16dp"
                android:layout_height="0dp"/><!-- Spacer -->
            <Button
                android:id="@+id/ServCancelBtn"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="Cancel"
                app:cornerRadius="0dp"
                android:backgroundTint="@color/green"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
